--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-sidenav>
-    <app-footer></app-footer>
+    <div class="wrapper">
+        <div class="container">
+            <router-outlet></router-outlet>
+        </div>
+        <div class="footer">
+            <app-footer></app-footer>
+        </div>
+    </div>
 </app-sidenav>
