--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,9 @@
 
 .container {
     padding-bottom: 1.5rem;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-bottom: 5%;
     /* Footer height */
 }
 
