--- a/src/app/product/formproduct.component.html
+++ b/src/app/product/formproduct.component.html
@@ -56,8 +56,49 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <image-product></image-product>
+            <div class="input-group">
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="validatedCustomFile" multiple (change)="detectFiles($event)">
+                    <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+                </div>
+                <div class="input-group-append">
+                    <button class="btn btn-success" type="button">Upload</button>
+                </div>
+            </div>
+
+
+            <div class="form-group my-5">
+                <div *ngIf="product.productImage?.length>0 || urls?.length>0" id="carouselImageControls" class="carousel slide" data-ride="carousel">
+
+                    <div class="carousel-inner" *ngIf="product.productImage?.length>0 else elseImages">
+                        <div class="carousel-item" *ngFor="let image of product.productImage; index as i; first as isFirst" [ngClass]="{active:isFirst}">
+                            <div class="d-flex justify-content-center">
+                                <img class="d-block w-25" src="http://localhost:8080/renter/uploads/img/{{image.imageRoute}}" alt="image.imageRoute">
+                            </div>
+                            <div class="d-flex justify-content-center mt-2">
+                                <button class="btn btn-danger" type="button" (click)="deleteImg(image.idImages)">Delete Image</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <ng-template #elseImages>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" *ngFor="let url of urls; index as i; first as isFirst" [ngClass]="{active:isFirst}">
+                                <div class="d-flex justify-content-center">
+                                    <img class="d-block w-25 h-50 img-thumbnail rounded" [src]="url">
+                                </div>
+                            </div>
+                        </div>
+                    </ng-template>
+                    <a class="carousel-control-prev" href="#carouselImageControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselImageControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
 
             <div class="form-group row">
