--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,10 +5,10 @@
         <div class="container">
 
             <!-- Grid row-->
-            <div class="row py-4 d-flex align-items-center">
+            <div class="row py-2 d-flex align-items-center">
 
                 <!-- Grid column -->
-                <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+                <div class="col-md-6 col-lg-5 text-center text-white text-md-left">
                     <h6 class="mb-0">Get connected with us on social networks!</h6>
                 </div>
                 <!-- Grid column -->
@@ -18,23 +18,23 @@
 
                     <!-- Facebook -->
                     <a class="fb-ic media-icon">
-                        <i class="fab fa-facebook-f white-text mr-4"> </i>
+                        <i class="fab fa-facebook-f mr-4"> </i>
                     </a>
                     <!-- Twitter -->
                     <a class="tw-ic media-icon">
-                        <i class="fab fa-twitter white-text mr-4"> </i>
+                        <i class="fab fa-twitter mr-4"> </i>
                     </a>
                     <!-- Google +-->
                     <a class="gplus-ic media-icon">
-                        <i class="fab fa-google-plus-g white-text mr-4"> </i>
+                        <i class="fab fa-google-plus-g mr-4"> </i>
                     </a>
                     <!--Linkedin -->
                     <a class="li-ic media-icon">
-                        <i class="fab fa-linkedin-in white-text mr-4"> </i>
+                        <i class="fab fa-linkedin-in mr-4"> </i>
                     </a>
                     <!--Instagram-->
                     <a class="ins-ic media-icon">
-                        <i class="fab fa-instagram white-text"> </i>
+                        <i class="fab fa-instagram"> </i>
                     </a>
 
                 </div>
@@ -46,85 +46,8 @@
         </div>
     </div>
 
-    <!-- Footer Links -->
-    <div class="footer-links container text-center text-md-left">
-
-        <!-- Grid row -->
-        <div class="row">
-
-            <!-- Grid column -->
-            <div class="col-md-3 mx-auto">
-
-                <!-- Links -->
-                <a class="font-weight-bold text-uppercase mt-3 mb-4 dropdown-toggle text-white" href="#" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Get Started
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Home</a>
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Sign Up</a>
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Downloads</a>
-                </div>
-            </div>
-            <!-- Grid column -->
-
-            <hr class="clearfix w-100 d-md-none">
-
-            <!-- Grid column -->
-            <div class="col-md-3 mx-auto">
-
-                <!-- Links -->
-                <a class="font-weight-bold text-uppercase mt-3 mb-4 dropdown-toggle text-white" href="#" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    About Us
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Company Information</a>
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Contact Us</a>
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Reviews</a>
-                </div>
-            </div>
-            <!-- Grid column -->
-
-            <hr class="clearfix w-100 d-md-none">
-
-            <!-- Grid column -->
-            <div class="col-md-3 mx-auto">
-
-                <!-- Links -->
-                <a class="font-weight-bold text-uppercase mt-3 mb-4 dropdown-toggle text-white" href="#" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Support
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> FAQ</a>
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Help Desk</a>
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Forum</a>
-                </div>
-            </div>
-            <!-- Grid column -->
-
-            <hr class="clearfix w-100 d-md-none">
-
-            <!-- Grid column -->
-            <div class="col-md-3 mx-auto">
-
-                <!-- Links -->
-                <a class="font-weight-bold text-uppercase mt-3 mb-4 dropdown-toggle text-white" href="#" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Legal
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Terms of Service</a>
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Terms of Use</a>
-                    <a class="dropdown-item" href="#!"><i class='fas fa-angle-right'></i> Privacy Policy</a>
-                </div>
-            </div>
-            <!-- Grid column -->
-
-        </div>
-        <!-- Grid row -->
-
-    </div>
-    <hr>
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">&copy; 2019 {{ autor }} </div>
+    <div class="footer-copyright text-center pt-3 pb-3">&copy; 2019 {{ autor }} </div>
     <!-- Copyright -->
 
 </footer>
