--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,37 @@
+
+<div class="card bg-light mb-3">
+  <div class="card-header">Productos</div>
+  <div class="card-body">
+    <h5 class="card-title">Listado de Productos</h5>
+<table class="table table-bordered table-striped">
+  <thead>
+    <tr>
+      <th>description</th>
+      <th>brand</th>
+      <th>price</th>
+      <th>model</th>
+      <th>name</th>
+      <th>quantity</th>
+      <th>date</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>{{landing.productDescription}}</td>
+      <td>{{landing.productBrand}}</td>
+      <td>{{landing.productPrice}}</td>
+      <td>{{landing.productModel}}</td>
+      <td>{{landing.productName}}</td>
+      <td>{{landing.productQuantity}}</td>
+      <td>{{landing.productDate}}</td>
+    </tr>
+  </tbody>
+</table>
+
+  </div>
+</div>
+
+
 <main class="page landing-page">
     <section id="Acerca_de_Nosotros" class="clean-block about-us">
       <div class="container" id="Mecanica">
