--- a/src/app/product/formproduct.component.html
+++ b/src/app/product/formproduct.component.html
@@ -2,8 +2,11 @@
     <li *ngFor="let err of errors">
     </li>
 </ul>
-<div class="card bg-dark text-white">
-    <div class="card-header">{{ title }}</div>
+
+<div class="card text-white">
+
+    <div class="card-header bg-dark">{{ title }}</div>
+
     <div class="card-body">
 
         <form #productForm="ngForm">
