--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -1,5 +1,19 @@
+.container-fluid {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
 .main-nav {
     background-color: #f92a19;
+}
+
+.fa-angle-right {
+    color: #FF6600;
 }
 
 .sidenav-container {
@@ -29,4 +43,8 @@
 
 .navbar-text {
     color: #f7f4f4;
+}
+
+.header {
+    background-color: #062835;
 }
