--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer class="footer bg-dark page-footer font-small indigo">
 
     <div id="social-media">
-        <div class="container">
+        <div class="container-fluid">
 
             <!-- Grid row-->
             <div class="row py-2 d-flex align-items-center">
