--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -23,39 +23,52 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-        <mat-toolbar class="main-nav">
-            <button class="text-white" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sidenav.open()">
-              <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-            </button>
-            <a class="navbar-brand" routerLink="/LandingPage">
-                <img src="assets/images/logo3.png" width="80" height="80" alt="">
-            </a>
-            <span class="spacer"></span>
-            <mat-nav-list>
-                <a class="nav-link navbar-text" routerLink="/landing_page">Home</a>
-                <a class="nav-link navbar-text dropdown-toggle mt-3 mb-4" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
+        <div class="container-fluid">
+            <!--Grid Row-->
+            <div class="row d-flex align-items-center">
 
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" routerLink="/categorias"><i class='fas fa-angle-right'></i> Mechanics</a>
-                    <br>
-                    <a class="dropdown-item" routerLink="/categorias"><i class='fas fa-angle-right'></i> Carpentry</a>
-                    <br>
-                    <a class="dropdown-item" routerLink="/categoris"><i class='fas fa-angle-right'></i> Electricity</a>
-                </div>
+                <mat-toolbar class="main-nav">
+                    <!-- Grid column -->
+                    <div class="col-sm-1 col-md-1 col-lg-1">
+                        <button class=" text-white " type="button " aria-label="Toggle sidenav " mat-icon-button (click)="sidenav.open() ">
+                            <mat-icon aria-label="Side nav toggle icon ">menu</mat-icon>
+                          </button>
+                    </div>
+                    <!-- Grid column -->
+                    <div class="col-sm-1 col-md-1 col-lg-1">
+                        <a class="navbar-brand " routerLink="/landing_page ">
+                            <img src="assets/images/logo3.png " width="80 " height="80 " alt=" ">
+                        </a>
+                    </div>
+                    <!-- Grid column -->
+                    <div class="col-sm-10 col-md-10 col-lg-10 text-center text-md-right">
+                        <mat-nav-list>
+                            <a class="nav-link navbar-text " routerLink="/landing_page ">Home</a>
 
-                <a class="nav-link navbar-text" href="#">About us</a>
-                <a class="nav-link navbar-text" href="#">
-                    <span>
-                        <i class="fas fa-sign-in-alt"></i>
-                    </span> Sign Up
-                </a>
-                <a class="nav-link navbar-text" href="#">
-                    <span>
-                      <i class="fas fa-user "></i>
-                    </span> Login
-                </a>
-            </mat-nav-list>
-        </mat-toolbar>
+                            <a class="text-white dropdown-toggle mt-3 mb-4" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
+
+                            <div class="dropdown-menu w-auto" aria-labelledby="dropdownMenuButton ">
+                                <a class="dropdown-item" routerLink="/categorias "><i class='fas fa-angle-right'></i> Mechanics</a>
+                                <br>
+                                <a class="dropdown-item" routerLink="/categorias "><i class='fas fa-angle-right'></i> Carpentry</a>
+                                <br>
+                                <a class="dropdown-item" routerLink="/categoris "><i class='fas fa-angle-right'></i> Electricity</a>
+                            </div>
+
+                            <a class="nav-link navbar-text " href="# ">About us</a>
+                            <a class="nav-link navbar-text " href="# "><span><i class="fas fa-sign-in-alt "></i></span> Sign Up</a>
+                            <a class="nav-link navbar-text " href="# "><span><i class="fas fa-user "></i></span> Login</a>
+                        </mat-nav-list>
+                    </div>
+                </mat-toolbar>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <header class="header col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">Header</header>
+            </div>
+        </div>
+
         <ng-content></ng-content>
         <!-- Add Content Here -->
     </mat-sidenav-content>
