--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -6,14 +6,39 @@
                    <div class="product-info">
                        <div class="row">
                            <div class="col-md-6">
-                               <div class="gallery">
-                                   <div class="sp-wrap"><a href="assets/images/gato.jpg"><img class="img-fluid d-block mx-auto" src="assets/images/gato.jpg"></a></div>
-                               </div>
+
+                             <!--------------------Carrucel de Imagenes -------------------------->
+                             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                   <ol class="carousel-indicators">
+                                       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                     </ol>
+                                    <div class="carousel-inner">
+                                     <div class="carousel-item active">
+                                       <img class="d-block w-100" src="assets/images/gato.jpg" alt="First slide">
+                                     </div>
+                                     <div class="carousel-item">
+                                       <img class="d-block w-100" src="assets/images/flexometro.jpg" alt="Second slide">
+                                     </div>
+                                     <div class="carousel-item">
+                                       <img class="d-block w-100" src="assets/images/bernier.jpg" alt="Third slide">
+                                     </div>
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                     <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                     <span class="sr-only">Next</span>
+                                    </a>
+                                    </div>
                            </div>
                            <div class="col-md-6">
                                <div class="info">
                                    <h3>Gato Hidráulico</h3>
-                                   <div class="rating">Calificaciones positivas: </div>
+                                   <div class="rating">Product Rate: </div>
                                    <div class="price">
                                        <h3>$300.00</h3>
                                    </div><button class="btn btn-primary" type="button"><i class="icon-basket"></i>Add to Cart</button>
@@ -28,9 +53,9 @@
                    <div class="product-info">
                        <div>
                            <ul class="nav nav-tabs" id="myTab">
-                               <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" id="description-tab" href="#description">Description del Vendedor</a></li>
-                               <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" id="specifications-tabs" href="#specifications">Especificaciones</a></li>
-                               <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" id="reviews-tab" href="#reviews">Reseñas</a></li>
+                               <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" id="description-tab" href="#description">About the Lender</a></li>
+                               <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" id="specifications-tabs" href="#specifications">Product Description</a></li>
+                               <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" id="reviews-tab" href="#reviews">Comments</a></li>
                            </ul>
                            <div class="tab-content" id="myTabContent">
                                <div class="tab-pane active fade show description" role="tabpanel" id="description">
@@ -68,21 +93,21 @@
                                <div class="tab-pane fade show" role="tabpanel" id="reviews">
                                    <div class="reviews">
                                        <div class="review-item">
-                                           <div class="rating">Likes del Producto: </div>
+                                           <div class="rating">Product Rate: </div>
                                            <h4>Incredible product</h4><span class="text-muted"><a href="#">John Smith</a>, 20 Jan 2018</span>
                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                        </div>
                                    </div>
                                    <div class="reviews">
                                        <div class="review-item">
-                                           <div class="rating">Likes del Producto:</div>
+                                           <div class="rating">Product Rate:</div>
                                            <h4>Incredible product</h4><span class="text-muted"><a href="#">John Smith</a>, 20 Jan 2018</span>
                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                        </div>
                                    </div>
                                    <div class="reviews">
                                        <div class="review-item">
-                                           <div class="rating">Likes del Producto</div>
+                                           <div class="rating">Product Rate:</div>
                                            <h4>Incredible product</h4><span class="text-muted"><a href="#">John Smith</a>, 20 Jan 2018</span>
                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                        </div>
@@ -92,14 +117,14 @@
                        </div>
                    </div>
                    <div class="clean-related-items">
-                       <h3>Productos Relacionados</h3>
+                       <h3>Related Products</h3>
                        <div class="items">
                            <div class="row justify-content-center">
                                <div class="col-sm-6 col-lg-4">
                                    <div class="clean-related-item">
                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/images/flexometro.jpg"></a></div>
                                        <div class="related-name"><a href="#">Flexometro</a>
-                                           <div class="rating">Likes del Producto: </div>
+                                           <div class="rating">Product Rate: </div>
                                            <h4>$300</h4>
                                        </div>
                                    </div>
@@ -108,7 +133,7 @@
                                    <div class="clean-related-item">
                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/images/martillo.jpg"></a></div>
                                        <div class="related-name"><a href="#">Martillo</a>
-                                           <div class="rating">Likes del Producto: </div>
+                                           <div class="rating">Product Rate: </div>
                                            <h4>$300</h4>
                                        </div>
                                    </div>
@@ -117,7 +142,7 @@
                                    <div class="clean-related-item">
                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/images/pinzas.JPG"></a></div>
                                        <div class="related-name"><a href="#">Pinzas</a>
-                                           <div class="rating">Likes del Producto: </div>
+                                           <div class="rating">Product Rate: </div>
                                            <h4>$300</h4>
                                        </div>
                                    </div>
@@ -129,3 +154,5 @@
            </div>
        </section>
    </main>
+
+   <br>
