--- a/src/app/product/formproduct.component.html
+++ b/src/app/product/formproduct.component.html
@@ -94,11 +94,11 @@
                         </div>
                     </ng-template>
                     <a class="carousel-control-prev" href="#carouselImageControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="carousel-control-prev-icon text-dark" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselImageControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="carousel-control-next-icon text-dark" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
