Fixed routes to go to the landing page

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -36,14 +36,14 @@
                     </div>
                     <!-- Grid column -->
                     <div class="col-sm-1 col-md-1 col-lg-1">
-                        <a class="navbar-brand " routerLink="/landing_page ">
+                        <a class="navbar-brand " [routerLink]="['/landing_page']">
                             <img src="assets/images/logo3.png " width="80 " height="80 " alt=" ">
                         </a>
                     </div>
                     <!-- Grid column -->
                     <div class="col-sm-10 col-md-10 col-lg-10 text-center text-md-right">
                         <mat-nav-list>
-                            <a class="nav-link navbar-text " routerLink="/landing_page ">Home</a>
+                            <a class="nav-link navbar-text " [routerLink]="['/landing_page']">Home</a>
 
                             <a class="text-white dropdown-toggle mt-3 mb-4" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
 
