--- a/src/app/product/formproduct.component.html
+++ b/src/app/product/formproduct.component.html
@@ -90,6 +90,9 @@
                                 <div class="d-flex justify-content-center">
                                     <img class="d-block w-25 h-50 img-thumbnail rounded" [src]="url">
                                 </div>
+                                <div class="d-flex justify-content-center mt-2">
+                                    <button class="btn btn-danger" type="button" (click)="deleteImg()">Delete Image</button>
+                                </div>
                             </div>
                         </div>
                     </ng-template>
