--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,3 +1,4 @@
+
 <main class="page product-page">
        <section class="clean-block clean-product dark">
            <div class="container">
@@ -37,14 +38,15 @@
                            </div>
                            <div class="col-md-6">
                                <div class="info">
-                                   <h3>Gato Hidráulico</h3>
+                                   <h3>{{producto.products.productName}}</h3>
                                    <div class="rating">Product Rate: </div>
                                    <div class="price">
                                        <h3>$300.00</h3>
                                    </div><button class="btn btn-primary" type="button"><i class="icon-basket"></i>Add to Cart</button>
                                    <div class="summary">
-                                       <p><br><br><strong>Gato hidráulico</strong>. El <strong>gato</strong> es una máquina empleada para la elevación de cargas que puede ser mecánica o <strong>hidráulica</strong>. Los <strong>gatos</strong> mecánicos,
-                                           de cremallera (o husillo) son adecuados para la elevación de pesos pequeños, mientras que los <strong>gatos hidráulicos</strong> se emplean para la elevación de grandes pesos.<br><br><br><br></p>
+                                       <p>
+                                         {{producto.products.productDescription}}
+                                       </p>
                                    </div>
                                </div>
                            </div>
