--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -49,9 +49,10 @@
                         <i class="fas fa-sign-in-alt"></i>
                     </span> Sign Up
                 </a>
-                <a class="nav-link navbar-text" href="#">
+                <a class="nav-link navbar-text" routerLink="/userLogin" href="#">
                     <span>
-                      <i class="fas fa-user "></i>
+                      <i class="fas fa-user ">      
+                    </i>
                     </span> Login
                 </a>
             </mat-nav-list>
