--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -59,6 +59,6 @@
                 </tr>
             </tbody>
         </table>
-        <paginator-nav *ngIf="paginator" [paginator]="paginator"></paginator-nav>
+        <paginator-nav *ngIf="paginator" [url]="url" [paginator]="paginator"></paginator-nav>
     </div>
 </div>
