--- a/src/app/paginator/paginator.component.html
+++ b/src/app/paginator/paginator.component.html
@@ -2,24 +2,24 @@
     <ul class="pagination justify-content-center" *ngIf="pages?.length > 0">
 
         <li [ngClass]="paginator.first? 'disabled page-item':'page-item'">
-            <a class="page-link" [routerLink]="['/products/page',0]">First Page</a>
+            <a class="page-link" [routerLink]="[url,0]">First Page</a>
         </li>
 
         <li class="page-item" *ngIf="paginator.number > 0">
-            <a class="page-link" [routerLink]="['/products/page', paginator.number-1]">Previous</a>
+            <a class="page-link" [routerLink]="[url, paginator.number-1]">Previous</a>
         </li>
 
         <li class="page-item" *ngFor="let page of pages" [ngClass]="page-1 == paginator.number?'active':''">
             <span class="page-link" *ngIf="page-1 == paginator.number">{{ page }}</span>
-            <a *ngIf="page-1 != paginator.number" class="page-link" [routerLink]="['/products/page', page-1]">{{ page }}</a>
+            <a *ngIf="page-1 != paginator.number" class="page-link" [routerLink]="[url, page-1]">{{ page }}</a>
         </li>
 
         <li class="page-item" *ngIf="paginator.number < paginator.totalPages - 1">
-            <a class="page-link" [routerLink]="['/products/page', paginator.number+1]">Next</a>
+            <a class="page-link" [routerLink]="[url, paginator.number+1]">Next</a>
         </li>
 
         <li [ngClass]="paginator.last? 'disabled page-item':'page-item'">
-            <a class="page-link" [routerLink]="['/products/page', paginator.totalPages-1]">Last Page</a>
+            <a class="page-link" [routerLink]="[url, paginator.totalPages-1]">Last Page</a>
         </li>
     </ul>
 </nav>
