--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -17,13 +17,13 @@
                                      </ol>
                                     <div class="carousel-inner">
                                      <div class="carousel-item active">
-                                       <img class="d-block w-100" src="{{producto.products.productImage[0].imageRoute}}" alt="First slide">
+                                       <img class="d-block w-100" src="assets/images/bernier.jpg" alt="First slide">
                                      </div>
                                      <div class="carousel-item">
-                                       <img class="d-block w-100" src="{{producto.products.productImage[0].imageRoute}}" alt="Second slide">
+                                       <img class="d-block w-100" src="assets/images/bernier.jpg" alt="Second slide">
                                      </div>
                                      <div class="carousel-item">
-                                       <img class="d-block w-100" src="{{producto.products.productImage[0].imageRoute}}" alt="Third slide">
+                                       <img class="d-block w-100" src="assets/images/bernier.jpg" alt="Third slide">
                                      </div>
                                     </div>
                                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -44,7 +44,7 @@
                                    <h3>{{producto.products.productName}}</h3>
                                    <div class="rating">Product Rate: </div>
                                    <div class="price">
-                                       <h3>$300.00</h3>
+                                       <h3>${{producto.products.productPrice}}</h3>
                                    </div><button class="btn btn-primary" type="button"><i class="icon-basket"></i>Add to Cart</button>
                                    <div class="summary">
                                        <p>
