--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,7 @@
     padding-bottom: 1.5rem;
     margin-top: 5%;
     margin-left: 10%;
+    margin-right: 10%;
     margin-bottom: 5%;
     /* Footer height */
 }
