--- a/src/app/categorias/categorias.component.html
+++ b/src/app/categorias/categorias.component.html
@@ -1,47 +1,22 @@
 <div class="container" id="Carpinteria">
     <div id="TituloCategoria" class="block-heading">
-        <h2 class="text-info">Carpentry</h2>
+        <h2 class="text-info">{{categoryName}}</h2>
         <p>Nuevos Productos para cualquier caso de mecánica.</p>
     </div>
     <div class="row justify-content-center">
-        <div class="col-sm-6 col-lg-4 text-center">
-            <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/images/serrucho.jpg">
+        <div *ngFor="let productCategory of products" class="col-sm-12 col-md-4 col-lg-4 text-center">
+            <!--  -->
+            <div class="card clean-card text-center">
+                <img class="card-img-top d-block" src="http://localhost:8080/renter/uploads/img/{{productCategory.product.productImage[0].imageRoute}}">
                 <div class="card-body info">
-                    <h4 class="card-title">Serrucho</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="text-center Enviar">
-                        <div class="btn-toolbar">
-                            <div class="btn-group btn-group-sm visible" role="group"><button class="btn btn-primary" type="button" routerLink="/productsPage">RENTAR</button></div>
-                        </div>
-                    </div>
+                    <h4 class="card-title">{{productCategory.product.productName}}</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">{{productCategory.product.productBrand}}</h6>
+                    <p class="card-text">{{productCategory.product.productDescription}}</p>
+                    <h6 class="card-subtitle mb-2 text-muted">${{productCategory.product.productPrice}}</h6>
+                    <button class="btn btn-primary" type="button" [routerLink]="['/productsPage',productCategory.product.productId]">Rent</button>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-lg-4">
-            <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/images/sierra_circular.jpg">
-                <div class="card-body info">
-                    <h4 class="card-title">Sierra Circular</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="text-center Enviar">
-                        <div class="btn-toolbar">
-                            <div class="btn-group btn-group-sm visible" role="group"><button class="btn btn-primary" type="button" routerLink="/productsPage">RENTAR</button></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-lg-4">
-            <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/images/martillo.jpg">
-                <div class="card-body info">
-                    <h4 class="card-title">Martillo-STANLEY</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="text-center Enviar">
-                        <div class="btn-toolbar">
-                            <div class="btn-group btn-group-sm visible" role="group"><button class="btn btn-primary" type="button" routerLink="/productsPage">RENTAR</button></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <br>
         </div>
     </div>
 </div>
