shopping cart added

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -9,7 +9,7 @@
           <div class="row justify-content-center">
               <div *ngFor="let productr2 of ProductResponses" class="col-sm-12 col-md-4 col-lg-4 text-center">
                 <!--  -->
-                  <div  class="card clean-card text-center"><img class="card-img-top d-block" src="{{productr2.products.productImage[0].imageRoute}}"><!--{{productr2.productImage.imageRoute}} -->
+                  <div  class="card clean-card text-center"><img class="card-img-top d-block" src="{{productr2.productImage.imageRoute}}"><!--{{productr2.productImage.imageRoute}} -->
                       <div class="card-body info">
                           <h4 class="card-title">{{productr2.products.productName}}</h4>
                           <h6 class="card-subtitle mb-2 text-muted">{{productr2.products.productBrand}}</h6>
