changed the color of the buttons of rent

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -15,7 +15,7 @@
                             <h6 class="card-subtitle mb-2 text-muted">{{product.productBrand}}</h6>
                             <p class="card-text">{{product.productDescription}}</p>
                             <h6 class="card-subtitle mb-2 text-muted">${{product.productPrice}}</h6>
-                            <button class="btn btn-primary" type="button" [routerLink]="['/productsPage',product.productId]">Rent</button>
+                            <button class="btn" type="button" [routerLink]="['/productsPage',product.productId]">Rent</button>
 
                         </div>
                     </div>
