--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -116,8 +116,8 @@
                                         <a href="#"><img class="img-fluid d-block mx-auto" src="assets/images/flexometro.jpg"></a>
                                     </div>
                                     <div class="related-name"><a href="#">Flexometro</a>
-                                        <div class="rating">Product Rate: </div>
-                                        <h4>$300</h4>
+                                        <div class="rating">Product Price: </div>
+                                        <h4>$20.45</h4>
                                     </div>
                                 </div>
                             </div>
@@ -127,8 +127,8 @@
                                         <a href="#"><img class="img-fluid d-block mx-auto" src="assets/images/martillo.jpg"></a>
                                     </div>
                                     <div class="related-name"><a href="#">Martillo</a>
-                                        <div class="rating">Product Rate: </div>
-                                        <h4>$300</h4>
+                                        <div class="rating">Product Price: </div>
+                                        <h4>$20.00</h4>
                                     </div>
                                 </div>
                             </div>
@@ -138,8 +138,8 @@
                                         <a href="#"><img class="img-fluid d-block mx-auto" src="assets/images/pinzas.JPG"></a>
                                     </div>
                                     <div class="related-name"><a href="#">Pinzas</a>
-                                        <div class="rating">Product Rate: </div>
-                                        <h4>$300</h4>
+                                        <div class="rating">Product Price: </div>
+                                        <h4>$30.45</h4>
                                     </div>
                                 </div>
                             </div>
