--- a/src/app/product/formproduct.component.html
+++ b/src/app/product/formproduct.component.html
@@ -64,9 +64,6 @@
                     <input type="file" class="custom-file-input" id="validatedCustomFile" multiple (change)="detectFiles($event)">
                     <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
                 </div>
-                <div class="input-group-append">
-                    <button class="btn btn-success" type="button">Upload</button>
-                </div>
             </div>
 
 
@@ -78,9 +75,6 @@
                             <div class="d-flex justify-content-center">
                                 <img class="d-block w-25" src="http://localhost:8080/renter/uploads/img/{{image.imageRoute}}" alt="image.imageRoute">
                             </div>
-                            <div class="d-flex justify-content-center mt-2">
-                                <button class="btn btn-danger" type="button" (click)="deleteImg(image.idImages)">Delete Image</button>
-                            </div>
                         </div>
                     </div>
 
@@ -90,18 +84,15 @@
                                 <div class="d-flex justify-content-center">
                                     <img class="d-block w-25 h-50 img-thumbnail rounded" [src]="url">
                                 </div>
-                                <div class="d-flex justify-content-center mt-2">
-                                    <button class="btn btn-danger" type="button" (click)="deleteImg()">Delete Image</button>
-                                </div>
                             </div>
                         </div>
                     </ng-template>
                     <a class="carousel-control-prev" href="#carouselImageControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon text-dark" aria-hidden="true"></span>
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselImageControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon text-dark" aria-hidden="true"></span>
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
