Updating the frontend

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -13,7 +13,7 @@
         <hr>
         <mat-nav-list>
             <a mat-list-item class="text-muted" href="#">HELP & SETTINGS</a>
-            <a mat-list-item>Your Account</a>
+            <a mat-list-item routerLink="/profile/user/{id}">Your Account</a>
             <a mat-list-item>
                 <mat-icon>language</mat-icon>English
             </a>
